Correctly reload configuration with gestalt
- Each configuration source must have its own reload strategy since
  a reload strategy can only handle reloading of a single source.
- The cache passthrough mode must be set before the sources are
  built. Setting the option in the builder doesn't actually change
  the underlying setting until they are reloaded. Setting it in the
  config object avoids this issue.
- Also add the configuration system properties to the run task.

Merged-by: Stefan Walter <stefan.walter@iml.fraunhofer.de>